fixed spacing on projects, added styling to contact and resume

--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,28 @@
   justify-content: flex-end;
 }
 
+#signup-form {
+  border-radius: 5px;
+  box-shadow: 0 0 30px -5px hsl(0deg 0% 21% / 45%);
+}
+
+.skills {
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+  padding-bottom: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.skillsCard {
+  width: 80%;
+  min-height: 400px;
+  padding: 30px;
+  margin: 10px;
+  border: 0;
+  border-radius: 5px;
+  box-shadow: 0 0 30px -5px hsl(0deg 0% 21% / 45%);
+}
+
 
